# schema-preview

./: AGENTS.md  README.md  pyproject.toml
src/schema_preview/: __init__.py  _cli.py  _loader.py  _schema.py  _tree.py
tests/: test_schema_preview.py
tests/data/: events.jsonl
